# task_tracker

./: .gitignore  CMakeLists.txt
include/: Task.h  TasksManager.h  User.h  util.h
src/: Task.cpp  TasksManager.cpp  User.cpp  main.cpp  util.cpp
